--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -12,6 +12,8 @@ from student.helpers import (
   VERIFY_STATUS_APPROVED,
   VERIFY_STATUS_MISSED_DEADLINE
 )
+from django.core.urlresolvers import reverse
+from courseware.grades import grade
 %>
 
 <%
@@ -178,6 +180,25 @@ from student.helpers import (
         </div>
         % endif
       % endif
+
+      % if course.may_certify() and cert_status['status'] == 'processing':
+        <%
+          grade_summary = grade(request.user, request, course)
+          nonzero_cutoffs = [cutoff for cutoff in course.grade_cutoffs.values() if cutoff > 0]
+          success_cutoff = min(nonzero_cutoffs) if nonzero_cutoffs else None
+        %>
+        %if success_cutoff and grade_summary['percent'] > success_cutoff:
+        <div class="message message-status is-shown">
+          <h3 class="title">Course Passed</h3>
+          <p class="message-copy">
+          You have enough credits to pass this course.</p>
+          <form method="post" action="${reverse('request_grade')}">
+            <input type="hidden" name="course_id" value="${course.id}" />
+            <input type="submit" value="Complete Course" />
+          </form>
+        </div>
+        %endif
+      %endif
 
       % if course_mode_info['show_upsell'] and not is_course_blocked:
         <div class="message message-upsell has-actions is-expandable is-shown">
