Add organization field to student model, with a new migration. Add organization key defaulting to 'hidden' to common env settings for REGISTRATION_EXTRA_FIELDS. Add organization to registration form fields.
Fixes https://github.com/jazkarta/edx-platform-for-isc/issues/6

--- a/lms/templates/register.html
+++ b/lms/templates/register.html
@@ -320,6 +320,12 @@
             <textarea id="goals" name="goals" value="" ${'required aria-required="true"' if settings.REGISTRATION_EXTRA_FIELDS['goals'] == 'required' else ''}></textarea>
           </li>
           % endif
+          % if settings.REGISTRATION_EXTRA_FIELDS['organization'] != 'hidden':
+          <li class="field ${settings.REGISTRATION_EXTRA_FIELDS['organization']} text" id="field-organization">
+            <label for="organization">${_('Organization')}</label>
+            <input id="organization" type="text" name="organization"  ${'required aria-required="true"' if settings.REGISTRATION_EXTRA_FIELDS['organization'] == 'required' else ''} />
+          </li>
+          % endif
         </ol>
       </div>
 
