Revert "Merge pull request #21 from jazkarta/backport-auto-certification"
This reverts commit 5efd45fd2b0c11c5d5f201e61efcc01a6ee747fb, reversing
changes made to 4e4276798d5ab02d64ab5432f2900fca6753bb5a.

--- a/lms/static/sass/elements/_system-feedback.scss
+++ b/lms/static/sass/elements/_system-feedback.scss
@@ -52,8 +52,7 @@
       width: flex-grid(10,12);
     }
 
-    .nav-actions,
-    .msg-actions {
+    .nav-actions {
       width: flex-grid(2,12);
       display: inline-block;
       vertical-align: middle;
