--- a/lms/templates/courseware/progress.html
+++ b/lms/templates/courseware/progress.html
@@ -96,6 +96,8 @@ from django.utils.http import urlquote_plus
             <h3 class="title">Course Completed</h3>
             <div class="copy"><p>You already have completed this course.</p></div>
             </div>
+            <p class="message-copy">${_("Your final grade:")}
+            <span class="grade-value">${"{0:.0f}%".format(float(cert['status']['grade'])*100)}</span>.
             %endif
           </div>
         </div>
