--- a/lms/templates/courseware/progress.html
+++ b/lms/templates/courseware/progress.html
@@ -97,7 +97,7 @@ from django.utils.http import urlquote_plus
             <div class="copy"><p>You already have completed this course.</p></div>
             </div>
             <p class="message-copy">${_("Your final grade:")}
-            <span class="grade-value">${"{0:.0f}%".format(float(cert['status']['grade'])*100)}</span>.
+            <span class="grade-value">${"{0:.0f}%".format(float(cert['grade'])*100)}</span>.
             %endif
           </div>
         </div>
