--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -120,7 +120,7 @@ from courseware.grades import grade
     <section class="info">
       <hgroup>
         <p class="date-block">
-        % elif course.has_ended():
+        % if course.has_ended():
         ${_("Course Completed - {end_date}").format(end_date=course.end_datetime_text("DATE_TIME"))}
         % elif course.may_certify() and cert_status['status'] == 'ready':
         ${_("Course Completed")}        
