Workaround for progress tab template errors when certificate display behavior is set to 'end' on courses without end dates.
In courseware progress template, check that cert dict has key 'status'
before checking for value of cert['status'].

--- a/lms/templates/courseware/progress.html
+++ b/lms/templates/courseware/progress.html
@@ -80,7 +80,7 @@ from django.utils.http import urlquote_plus
       %if success_cutoff and grade_summary['percent'] > success_cutoff:
         <div id="course-success" class="wrapper-msg success urgency-low">
           <div class="msg">
-            %if cert['status'] != 'ready':
+            %if 'status' in cert and cert['status'] != 'ready':
             <div class="msg-content">
             <h3 class="title">Course Passed</h3>
             <div class="copy"><p>You have enough credits to pass this course. Click on the Complete Course button to receive your final grade.</p></div>
