Display courses on find courses page sorted into sections by  organization. Use get_courses_by_university for find courses page course listings, so we can sort on organization.  Bypasses microsite setting ENABLE_COURSE_SORTING_BY_START_DATE

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -45,15 +45,18 @@
   </header>
 
   <section class="container">
-    <section class="courses">
-      <ul class="courses-listing">
-	%for course in courses:
-        <li class="courses-listing-item">
-          <%include file="../course.html" args="course=course" />
-        </li>
+        %for university in courses:
+      <section class="courses">
+        <h2>${university}</h2>
+        <ul class="courses-listing">
+        %for course in courses[university]:
+          <li class="courses-listing-item">
+            <%include file="../course.html" args="course=course" />
+          </li>
         %endfor
-      </ul>
+        </ul>
     </section>
+    %endfor
   </section>
 
 </section>
