Hide registration form elements after successful registration, since we do not navigate away from the page.

--- a/lms/templates/register.html
+++ b/lms/templates/register.html
@@ -59,6 +59,7 @@
         else {
           $('.status.message.submission-error').removeClass('is-shown');
           $('.status.message.submission-success').addClass('is-shown').focus();
+          $('#register-form .form-actions, #register-form .group-form, #register-form .instructions').hide();
         }
       });
 
