Use 'check' CSS class for Show Answer buttons. 'show' collides with Bootstrap class name.

--- a/lms/templates/problem.html
+++ b/lms/templates/problem.html
@@ -23,7 +23,7 @@
     <input class="save" type="button" value="${_('Save')}" />
     % endif
     % if answer_available:
-    <button class="show"><span class="show-label">${_('Show Answer')}</span> <span class="sr">${_("Reveal Answer")}</span></button>
+    <button class="check"><span class="show-label">${_('Show Answer')}</span> <span class="sr">${_("Reveal Answer")}</span></button>
     % endif
     % if attempts_allowed :
     <div class="submission_feedback">
