--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -122,7 +122,7 @@ from courseware.grades import grade
         <p class="date-block">
         % if course.has_ended():
         ${_("Course Completed - {end_date}").format(end_date=course.end_datetime_text("DATE_TIME"))}
-        % elif course.may_certify() and cert_status['status'] == 'ready':
+        % elif course.may_certify() and cert_status and cert_status['status'] == 'ready':
         ${_("Course Completed")}        
         % elif course.has_started():
         ${_("Course Started - {start_date}").format(start_date=course.start_datetime_text("DATE_TIME"))}
@@ -179,11 +179,11 @@ from courseware.grades import grade
               <p class="message-copy">${_('Your verification status is good until {date}.').format(date=verification_status['verification_good_until'])}
             % endif
           % endif
-        </div>
+        </div> 
         % endif
       % endif
 
-      % if course.may_certify() and cert_status['status'] == 'processing':
+      % if course.may_certify() and cert_status and cert_status['status'] == 'processing':
         <%
           grade_summary = grade(request.user, request, course)
           nonzero_cutoffs = [cutoff for cutoff in course.grade_cutoffs.values() if cutoff > 0]
