Revert class name on show answer button, fix display with CSS.

--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -622,6 +622,7 @@ div.problem {
       height: ($baseline*2);
       vertical-align: middle;
       font-weight: 600;
+      display: inline !important;
     }
 
     .save {
